pragma user_version; front overflow style fixes

--- a/front/client/gui/styles/directives.sass
+++ b/front/client/gui/styles/directives.sass
@@ -3,6 +3,9 @@
 .y-scroll
   overflow-y: scroll
 
+.hidden
+  overflow: hidden
+
 .y-hidden
   overflow-y: hidden
 
